--- a/Library System/nbproject/project.properties
+++ b/Library System/nbproject/project.properties
@@ -30,7 +30,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${libs.jcalendar-tz-1.3.3-4.jar.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
