View issue & return book details

--- a/Library System/nbproject/project.properties
+++ b/Library System/nbproject/project.properties
@@ -31,7 +31,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.jcalendar-tz-1.3.3-4.jar.classpath}
+    ${libs.jcalendar-tz-1.3.3-4.jar.classpath}:\
+    ${libs.rs2xml.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
